# ollama_client

./: Cargo.toml  README.md
src/: chat.rs  generate.rs  main.rs  ollama_lib.rs
