[package]
edition = "2021"
name = "ollama_client"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = {version = "0.12", optional = false, features = ["rustls-tls", "stream"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
tracing-subscriber = "0.3"
